# rover_slam

./: .gitignore  CLAUDE.md  README.md  Wed April 29  diagnose.sh  test_astar.py
docs/superpowers/notes/: baseline-executables.txt  baseline-mal_startup-nodes.txt
docs/superpowers/plans/: 2026-05-20-rover-modular-architecture.md  2026-05-21-rosbot-model-integration.md  2026-05-21-rover-sim-backend.md
docs/superpowers/specs/: 2026-05-20-rover-modular-architecture-design.md  2026-05-21-rosbot-model-integration-design.md  2026-05-21-rover-sim-backend-design.md
ros2_ws/: config.nathan  frames_2026-04-30_23.14.51.gv  frames_2026-04-30_23.17.11.gv  frames_2026-04-30_23.17.21.gv  mav.parm  mav.tlog  mav.tlog.raw
ros2_ws/src/rover_base/: package.xml  setup.py
ros2_ws/src/rover_base/calibration_results/: imu_calibration.yaml
ros2_ws/src/rover_base/imu_bag_calib/: imu_bag_calib_0.db3  metadata.yaml
ros2_ws/src/rover_base/launch/: base.launch.py
ros2_ws/src/rover_base/rover_base/: rover_node.py  velocity_controller.py
ros2_ws/src/rover_behaviors/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_behaviors/config/: tviz_config.nathan
ros2_ws/src/rover_behaviors/launch/: color_follower.launch.py  color_follower_tviz.launch.py  line_follower.launch.py  wall_stop.launch.py
ros2_ws/src/rover_behaviors/rover_behaviors/: auto_lidar.py  color_follower.py  lap_monitor.py  line_follower.py  stall_detector.py  wall_follow_pid.py  wall_stop.py
ros2_ws/src/rover_bringup/: package.xml  setup.py
ros2_ws/src/rover_bringup/config/: config.nathan
ros2_ws/src/rover_bringup/launch/: backend.launch.py  line_follower.launch.py  odom_nav.launch.py  rover.launch.py  slam_nav.launch.py
ros2_ws/src/rover_camera/: package.xml  setup.py
ros2_ws/src/rover_camera/rover_camera/: ros_stream.py
ros2_ws/src/rover_description/: CMakeLists.txt  package.xml
ros2_ws/src/rover_description/launch/: rsp.launch.py
ros2_ws/src/rover_description/urdf/: gz_ackermann.xacro  gz_diff_drive.xacro  gz_joint_state.xacro  gz_sensors.xacro  robot.urdf.xacro  robot_core.xacro  rosbot_sim.urdf.xacro
ros2_ws/src/rover_gui/: package.xml  setup.py
ros2_ws/src/rover_gui/rover_gui/: gui_node.py
ros2_ws/src/rover_localization/: package.xml  setup.py
ros2_ws/src/rover_localization/config/: amcl.yaml
ros2_ws/src/rover_localization/launch/: localization.launch.py
ros2_ws/src/rover_localization/maps/: last_map  map_April_26_7_40.data  map_April_26_7_40.pgm  map_April_26_7_40.yaml  map_April_27_3_52.data  map_April_27_3_52.pgm  map_April_27_3_52.yaml  map_April_30_16_52.pgm  map_April_30_16_52.pose.yaml  map_April_30_16_52.yaml  map_April_30_5_08.data  map_April_30_5_08.pgm  map_April_30_5_08.pose.yaml  map_April_30_5_08.yaml
ros2_ws/src/rover_localization/rover_localization/: save_map.py
ros2_ws/src/rover_localization/scripts/: fix_map_thresh.sh
ros2_ws/src/rover_navigation/: package.xml  setup.py
ros2_ws/src/rover_navigation/launch/: planner_offline.launch.py  slam_debug.py  slam_offline.launch.py  slam_planning.launch.py
ros2_ws/src/rover_navigation/rover_navigation/: astar_planner.py  goal_pub.py  pure_pursuit.py
ros2_ws/src/rover_navigation/rviz/: frames_2026-04-25_19.12.03.gv  slam_offline.rviz
ros2_ws/src/rover_sim/: package.xml  setup.py
ros2_ws/src/rover_sim/config/: bridge.yaml
ros2_ws/src/rover_sim/launch/: sim.launch.py  spawn.launch.py
ros2_ws/src/rover_sim/rover_sim/: cmd_vel_relay.py  map_to_world.py
ros2_ws/src/rover_sim/rviz/: sim.rviz
ros2_ws/src/rover_sim/test/: test_cmd_vel_relay.py  test_map_to_world.py
ros2_ws/src/rover_sim/worlds/: building.world  corridor.world
ros2_ws/src/rover_slam/: package.xml  setup.py
ros2_ws/src/rover_slam/launch/: mapping.launch.py
ros2_ws/src/rover_state_estimation/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_state_estimation/config/: ekf.yaml
ros2_ws/src/rover_state_estimation/launch/: state_estimation.launch.py
ros2_ws/src/rover_teleop/: package.xml  setup.py
ros2_ws/src/rover_teleop/rover_teleop/: joystick_teleop.py  teleop_node.py
ros2_ws/src/rover_terminal_viz/: CMakeLists.txt  package.xml
ros2_ws/src/rover_terminal_viz/include/rover_terminal_viz/: config_helper.hpp  display.hpp  gpu_renderer.hpp  robot_renderer.hpp  visualizer.hpp
ros2_ws/src/rover_terminal_viz/include/rover_terminal_viz/displays/: accel_stamped_display.hpp  camera_info_display.hpp  effort_display.hpp  fluid_pressure_display.hpp  grid_cells_display.hpp  grid_display.hpp  illuminance_display.hpp  image_display.hpp  laserscan_display.hpp  legacy_pointcloud_display.hpp  map_display.hpp  marker_display.hpp  motion_planning_display.hpp  nav2_display.hpp  odometry_display.hpp  path_display.hpp  point_stamped_display.hpp  pointcloud_display.hpp  polygon_display.hpp  pose_array_display.hpp  pose_display.hpp  pose_with_covariance_display.hpp  range_display.hpp  relative_humidity_display.hpp  robot_model_display.hpp  rosbag_display.hpp  tf_display.hpp  (+4 more)
ros2_ws/src/rover_terminal_viz/src/: config_helper.cpp  display.cpp  gpu_renderer.cpp  renderer.cpp  robot_renderer.cpp  terminal_rviz_node.cpp  visualizer.cpp
ros2_ws/src/rover_terminal_viz/src/displays/: accel_stamped_display.cpp  camera_info_display.cpp  effort_display.cpp  fluid_pressure_display.cpp  grid_cells_display.cpp  grid_display.cpp  illuminance_display.cpp  image_display.cpp  laserscan_display.cpp  legacy_pointcloud_display.cpp  map_display.cpp  marker_display.cpp  motion_planning_display.cpp  nav2_display.cpp  odometry_display.cpp  path_display.cpp  point_stamped_display.cpp  pointcloud_display.cpp  polygon_display.cpp  pose_array_display.cpp  pose_display.cpp  pose_with_covariance_display.cpp  range_display.cpp  relative_humidity_display.cpp  robot_model_display.cpp  rosbag_display.cpp  teleop_display.cpp  temperature_display.cpp  tf_display.cpp  twist_stamped_display.cpp  wrench_display.cpp
ros2_ws/src/rover_tools/: batterytest.py  package.xml  setup.py
ros2_ws/src/rover_tools/rover_tools/: calibrate_velocity.py  debug_vel.py  desktop_stream.py  fake_odom.py  imu_calib.py
