<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.1</version>
  <description>Top-level layered launch composition with a real|sim|bag backend switch.</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_base</exec_depend>
  <exec_depend>rover_camera</exec_depend>
  <exec_depend>rover_state_estimation</exec_depend>
  <exec_depend>rover_slam</exec_depend>
  <exec_depend>rover_localization</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_behaviors</exec_depend>
  <exec_depend>rover_terminal_viz</exec_depend>
  <exec_depend>rover_tools</exec_depend>
  <exec_depend>rover_sim</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
