<?xml version="1.0"?>
<package format="3">
  <name>rover_camera</name>
  <version>0.0.1</version>
  <description>Publishes the RealSense color stream as a ROS Image (/camera/color/image_raw).</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- runtime pip dep: pyrealsense2 (no rosdep key) -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
