<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.1</version>
  <description>URDF/xacro model and robot_state_publisher bringup for the rover. Dependency root of the rover_* stack.</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
