<?xml version="1.0"?>
<package format="3">
  <name>rover_gui</name>
  <version>0.0.1</version>
  <description>PyQt operator GUI for monitoring and commanding the rover.</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
