<?xml version="1.0"?>
<package format="3">
  <name>rover_localization</name>
  <version>0.0.1</version>
  <description>Localizes the rover on a saved map (amcl + slam_toolbox localization + map_server) and saves maps.</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>rover_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
