<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_sim</name>
  <version>0.0.0</version>
  <description>Gazebo Fortress simulation backend for the rover: worlds, ros_gz bridge, spawn/launch, producing the /scan,/imu,/camera topic contract.</description>
  <maintainer email="allendevaraj33333@gmail.com">Allen Devaraj</maintainer>
  <license>MIT</license>

  <exec_depend>rover_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rover_state_estimation</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_localization</exec_depend>
  <exec_depend>rover_behaviors</exec_depend>
  <exec_depend>rover_teleop</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
