<?xml version="1.0"?>
<package format="3">
  <name>rover_slam</name>
  <version>0.0.1</version>
  <description>Builds a live map with slam_toolbox (online async/sync); publishes /map and the map-&gt;odom TF.</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rover_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
