<?xml version="1.0"?>
<package format="3">
  <name>rover_tools</name>
  <version>0.0.1</version>
  <description>Developer, calibration, and debug utilities (not part of the runtime stack).</description>
  <maintainer email="allendevaraj33333@gmail.com">The2xMan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- runtime pip dep: pyrealsense2 (desktop_stream, no rosdep key) -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
